# affiliate-config-parser

./: Cargo.toml  Makefile  README.md  example.offer
src/: errors.rs  grammar.md  lib.rs  main.rs  parser.rs
tests/: parser_tests.rs
