[package]
name = "affiliate-config-parser"
version = "0.1.0"
edition = "2021"
description = "A parser for a simple affiliate marketing configuration language. Parses GEO rules, traffic sources, caps, and payouts."
readme = "README.md"
license = "MIT"
repository = "https://github.com/<your-username>/affiliate-config-parser"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
